--- a/css/styles.css
+++ b/css/styles.css
@@ -523,11 +523,17 @@ hr {
   vertical-align: middle;
   font-weight: 500;
 }
-
+.subtitle{
+  font-size: 2em;
+  font-family: "Roboto", sans-serif;
+}
+.subtitle .subscribers{
+  font-size: 1.2em;
+}
 .transparent-layer {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(34, 34, 34, 0.6);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(34, 34, 34, 0.4);
 }
 
 .site-header h2 .logo {
